--- a/index.html
+++ b/index.html
@@ -49,21 +49,22 @@
 <body>
 
   <div class="jouerbutton">
-    <img src="jouerbutton.png" onclick="window.location.href='jouer.html'">
+    <img src="assets/jouerbutton.png" onclick="window.location.href='jouer.html'">
   </div>
 
     <div class="shopbutton">
-    <img src="shopbutton.png" onclick="window.location.href='jouer.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='jouer.html'">
   </div>
 
     <div class="classementbutton">
-    <img src="classementbutton.png" onclick="window.location.href='jouer.html'">
+    <img src="assets/classementbutton.png" onclick="window.location.href='jouer.html'">
   </div>
 
   <div class="personnage-hobby">
-    <img src="persofix.png" alt="Personnage">
+    <img src="assets/persofix.png" alt="Personnage">
   </div>
 
 </body>
 
 </html>
+
