Change image paths for shop buttons in jouer.html
Updated image source paths for shop buttons.

--- a/jouer.html
+++ b/jouer.html
@@ -49,21 +49,22 @@
 <body>
 
   <div class="shop1">
-    <img src="shopbutton.png" onclick="window.location.href='solo.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='solo.html'">
   </div>
 
     <div class="shop2">
-    <img src="shopbutton.png" onclick="window.location.href='index.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='index.html'">
   </div>
 
     <div class="shop3">
-    <img src="shopbutton.png" onclick="window.location.href='index.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='index.html'">
   </div>
 
     <div class="shop4">
-    <img src="shopbutton.png" onclick="window.location.href='index.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='index.html'">
   </div>
 
 </body>
 
 </html>
+
