--- a/solo.html
+++ b/solo.html
@@ -12,7 +12,7 @@
     /* Supprimer les marges par défaut du navigateur */
     body {
         margin: 0;
-        background-color: rgb(65, 61, 61);
+        background-color: #41178A;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -313,3 +313,4 @@
 </body>
 
 </html>
+
