--- a/jouer.html
+++ b/jouer.html
@@ -53,7 +53,7 @@
   </div>
 
     <div class="shop2">
-    <img src="assets/shopbutton.png" onclick="window.location.href='index.html'">
+    <img src="assets/shopbutton.png" onclick="window.location.href='editeur.html'">
   </div>
 
     <div class="shop3">
@@ -67,4 +67,5 @@
 </body>
 
 </html>
+
 
