--- a/editeur.html
+++ b/editeur.html
@@ -107,21 +107,21 @@
       width: 100%;
       padding: 10px;
       margin-bottom: 8px;
-      background: #3498db;
+      background: #2c3e50;
       border: none;
       color: white;
       cursor: pointer;
       border-radius: 4px;
       font-size: 14px;
       transition: background 0.3s;
-      opacity: 100%;
+      opacity: 20%;
     }
 
     .tool-btn:hover {
-      background: #2980b9;
+      background: #263443;
     }
 
-    .tool-btn.active {
+    .tool-btn.platform {
       background: #e74c3c;
     }
 
@@ -192,9 +192,9 @@
 
     <div class="outilsclass">
     <div class="section2">
-      <button class="tool-btn active" id="platformTool">Plateforme</button>
+      <button class="tool-btn" id="platformTool">Plateforme</button>
       <button class="tool-btn" id="trampolineTool">Tremplin</button>
-      <button class="tool-btn delete-btn" id="deleteTool">Supprimer</button>
+      <button class="tool-btn" id="deleteTool">Supprimer</button>
     </div>
     </div>
 
